# spiral_intervention_lab

./: README.md  pyproject.toml
SpiralInterventionLab/: README.md  __init__.py
SpiralInterventionLab/backends/: __init__.py  base.py  hf_transformers.py  llama_cpp.py  mlx_lm.py
SpiralInterventionLab/bridge/: __init__.py  controller_clients.py
SpiralInterventionLab/controllers/: __init__.py  base.py  factory.py  providers.py
SpiralInterventionLab/examples/: __init__.py  digit_transform_e2e.py
SpiralInterventionLab/prompts/: controller_v01.txt  prompt_hint_v01.txt
SpiralInterventionLab/runtime/: __init__.py  adapter.py  baselines.py  codecs.py  compiler.py  edit_budget.py  effects.py  loop.py  overlays.py  policy.py  rank1_bridge.py  schema.py  sidecar.py  tlens_runtime.py  trace_recorder.py  worker.py
SpiralInterventionLab/tasks/: __init__.py  digit_copy.py  digit_transform.py  language_tasks.py  semantic_critic.py
SpiralInterventionLab/tests/: __init__.py  test_backends_and_bridge.py  test_controller_runtime.py  test_examples.py  test_task_env.py
docs/: healthy_tweaking_control_planes.md  readout_escape_insight_taxonomy.md  readout_escape_research_observations.md
